# inker

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  config.toml  package-lock.json  package.json  tsconfig.json
docs/design/: 2026-01-04-code-review.md  2026-01-04-refactoring-summary.md  design-decision-0.0.1  design-decision-0.0.2
genkit/: package-lock.json  package.json
genkit/src/: index.ts
inker-py/: .env.example  README.md  config.toml  pyproject.toml
inker-py/src/inker_py/: __init__.py  context.py  telemetry.py  types.py
inker-py/src/inker_py/cli/: __init__.py  app.py  history.py  main.py
inker-py/src/inker_py/config/: __init__.py  config.py
inker-py/src/inker_py/model/: __init__.py  llm.py  tracing.py
inker-py/src/inker_py/model/plugins/: __init__.py  base.py  bash.py  edit_file.py  git.py  github_pr.py  glob.py  grep.py  list_directory.py  read_file.py  write_file.py
inker-py/tests/: __init__.py  test_plugins.py  test_types.py
src/: App.tsx  LoadingIcon.tsx  telemetry.ts
src/cli/: App.tsx  HistoryItem.tsx  Progress.tsx  inputHistory.ts  main.tsx  types.ts
src/cli/__tests__/: App.test.tsx  HistoryItem.test.tsx  Progress.test.tsx
src/config/: config.ts
src/model/: context.ts  gemini.ts  mockModel.ts  modelAdapter.ts  tracing.ts
src/model/plugins/: BashPlugin.ts  EditFilePlugin.ts  GitPlugin.ts  GithubPRPlugin.ts  GlobPlugin.ts  GrepPlugin.ts  ListDirectoryPlugin.ts  ReadFilePlugin.ts  WriteFilePlugin.ts
src/test/: modelAdapterTest.ts
